app/assets/stylesheets/custom.css.scss
@import "bootstrap";
@import "gradients";

$lightGray: #999;

@mixin box_sizing {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}


html {
  overflow-y: scroll;
}

body {
  padding-top: 60px;  
}

section {
  overflow: auto;
}

textarea {
  resize: vertical;
}

.center {
  text-align: center;
  h1 {
    margin-bottom: 10px;
  }
}

/* button */

.btn-task-animate {
  @include gradient;
}

/* typography */

h1, h2, h3, h4, h5, h6 {
  line-height: 1;
}

h1 {
  font-size: 3em;
  letter-spacing: -2px;
  margin-bottom: 30px;
  text-align: center;
}

h2 {
  font-size: 1.2em;
  letter-spacing: -1px;
  margin-bottom: 30px;
  text-align: center;
  font-weight: normal;
  color: $lightGray;
}

p {
  font-size: 1.1em;
  line-height: 1.7em;
}

p.doc {
  text-align: justify;
}

/* header */

#logo {
  float: left;
  margin-right: 10px;
  font-size: 1.7em;
  color: #fff;
  text-transform: uppercase;
  letter-spacing: -1px;
  padding-top: 9px;
  font-weight: bold;
  line-height: 1;

  &:hover {
    color: #fff;
    text-decoration: none;
  }
}

/* footer */

footer {
  margin-top: 45px;
  padding-top: 5px;
  border-top: 1px solid #eaeaea;
  color: $lightGray;
  a {
    color: #555;
    &:hover {
      color: #222;
    }
  }
  small {
    float: left;
  }
  ul {
    float: right;
    list-style: none;
    li {
      float: left;
      margin-left: 10px;
    }
  }
}

.debug_dump {
	clear: both;
	float: left;
	width: 100%;
	margin-top: 45px;
	@include box_sizing;
}

input, textarea, select, .uneditable-input {
  border: 1px solid #bbb;
  width: 100%;
  margin-bottom: 15px;
  @include box_sizing;
}

input {
  height: auto !important;
}

#error_explanation {
  color: #f00;
  ul {
    list-style: none;
    margin: 0 0 18px 0;
  }
}

// the fields with wrong value are automatically wrapped in 
// <div class="field_with_errors"> ... </div>

.field_with_errors {
  @extend .control-group;
  @extend .error;
}

/* Headers in module description table */

// Module
.mod-hdr {
  width: 16.5%;
  text-align: center;
  font-size: large;
  font-weight: bold;
}

// Protocol
.prot-hdr {
  width: 11%;
  text-align: center;
  color: gray;
}

